fixed background of burger icon

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ form > div > input {
   border-color: var(--rose2);
   color: var(--header-footer);
 }
-button {
+.sign-up {
   background-color: var(--rose2);
   border-color: var(--rose2);
   color: var(--header-footer);
